--- a/index.html
+++ b/index.html
@@ -3,120 +3,127 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة نظام OMA</title>
+<title>تهيئة OMA - SuperAdmin</title>
 <style>
-body{font-family:'Cairo',sans-serif;background:#f5f9ff;margin:0;padding:20px;}
-h2{color:#004aad;text-align:center;margin-bottom:20px;}
-#log{white-space:pre-wrap;background:#fff;padding:15px;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,0.1);height:400px;overflow:auto;}
-button{padding:10px 15px;background:#004aad;color:white;border:none;border-radius:8px;cursor:pointer;margin-top:15px;}
-button:hover{background:#003680;}
+body{font-family:'Cairo',sans-serif;background:#f5f9ff;margin:0;padding:20px}
+h2{text-align:center;color:#004aad;margin-bottom:20px}
+#status{white-space:pre-wrap;padding:15px;background:#fff;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.1);max-height:500px;overflow:auto;}
+button{padding:10px 15px;margin:10px auto;display:block;border:none;border-radius:8px;background:#004aad;color:#fff;font-weight:bold;cursor:pointer}
 </style>
 </head>
 <body>
-<h2>⚡ بدء التهيئة الآمنة لنظام OMA</h2>
-<div id="log"></div>
-<button id="startBtn">بدء التهيئة</button>
+
+<h2>⚡ تهيئة نظام OMA</h2>
+<button id="startBtn">بدء التهيئة الآمنة</button>
+<div id="status"></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, setDoc, doc, serverTimestamp, getDocs, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, doc, setDoc, serverTimestamp, getDoc, deleteDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-const logEl = document.getElementById('log');
-function log(msg){ logEl.textContent += msg + "\n"; logEl.scrollTop = logEl.scrollHeight; }
-
+// Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
   projectId: "oma0-33cc0",
   storageBucket: "oma0-33cc0.firebasestorage.app",
   messagingSenderId: "899300774863",
-  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
-  measurementId: "G-5CKWYQT9XZ"
+  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-// بيانات superAdmin
-const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
+const statusEl = document.getElementById('status');
+const startBtn = document.getElementById('startBtn');
 
-// بيانات المعهدين التجريبيين
-const demoInstitutes = [
-  { name:"معهد التجربة 1", email:"demo1@oma.edu", password:"123456demo1", colors:{primary:"#004aad", bg:"#f5f9ff", card:"#fff", accent:"#ffcc33"}, plan:"trial", trialDays:30 },
-  { name:"معهد التجربة 2", email:"demo2@oma.edu", password:"123456demo2", colors:{primary:"#2e7d32", bg:"#f0f8f0", card:"#ffffff", accent:"#66bb6a"}, plan:"yearly" }
-];
+function log(msg){ statusEl.textContent += msg + "\n"; statusEl.scrollTop = statusEl.scrollHeight; }
 
-async function initSystem(){
-  log("⏳ بدء التهيئة...");
+async function ensureUserInFirestore(email, uid, type){
+  const usersRef = collection(db,"users");
+  const userDocRef = doc(usersRef, uid);
+  const snap = await getDoc(userDocRef);
+  if(!snap.exists()){
+    await setDoc(userDocRef, { uid, email, type, createdAt: serverTimestamp() });
+    log(`✅ تم إنشاء مستند المستخدم في Firestore: ${email}`);
+  } else log(`ℹ️ مستند المستخدم موجود مسبقًا: ${email}`);
+}
+
+async function clearPreviousData(){
+  log("🗑️ حذف جميع المعاهد والمستندات السابقة...");
+  const snap = await getDocs(collection(db,"institutes"));
+  for(const d of snap.docs) await deleteDoc(doc(db,"institutes",d.id));
+  const usersSnap = await getDocs(collection(db,"users"));
+  for(const d of usersSnap.docs){
+    if(d.data().type!=="superAdmin") await deleteDoc(doc(db,"users",d.id));
+  }
+  log("✅ تم حذف البيانات السابقة");
+}
+
+async function startSetup(){
+  startBtn.disabled = true;
+  statusEl.textContent = "✅ بدء التهيئة الآمنة...\n";
+
   try{
-    // إضافة superAdmin
-    log("🔹 التحقق من وجود superAdmin...");
-    const usersRef = collection(db,"users");
-    const superDocRef = doc(usersRef, superAdmin.email);
-    const superSnap = await getDoc(superDocRef);
-    if(!superSnap.exists()){
-      log("🔸 superAdmin غير موجود في Firestore، سيتم إضافته...");
-      // تحقق من وجود المستخدم في Auth
-      try{
-        const userCred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
-        await setDoc(superDocRef, { uid:userCred.user.uid, email:superAdmin.email, type:"superAdmin", createdAt:serverTimestamp() });
-        log("✅ superAdmin تم إنشاؤه وإضافته إلى Firestore");
-      }catch(err){
-        if(err.code === "auth/email-already-in-use"){
-          log("⚠️ المستخدم موجود بالفعل في Auth، سيتم إضافته فقط في Firestore");
-          // جلب UID من Auth (Firebase Web SDK لا يدعم جلب UID للمستخدم الحالي غير مسجل، يمكن حلها بالدخول)
-          await setDoc(superDocRef, { uid:"UNKNOWN_UID", email:superAdmin.email, type:"superAdmin", createdAt:serverTimestamp() });
-          log("✅ superAdmin أضيف في Firestore");
-        }else{
-          throw err;
-        }
-      }
-    }else log("✅ superAdmin موجود مسبقاً في Firestore");
+    await clearPreviousData();
 
-    // حذف المعاهد القديمة
-    log("🗑️ حذف جميع المعاهد القديمة...");
-    const instCol = collection(db,"institutes");
-    const snaps = await getDocs(instCol);
-    for(const s of snaps.docs) await deleteDoc(doc(db,"institutes",s.id));
-    log("✅ تم حذف جميع المعاهد القديمة");
-
-    // إنشاء المعهدين التجريبيين
-    for(const inst of demoInstitutes){
-      log(`🔹 إنشاء المعهد: ${inst.name}`);
-      let adminId = "";
-      try{
-        const userCred = await createUserWithEmailAndPassword(auth, inst.email, inst.password);
-        adminId = userCred.user.uid;
-        log(`✅ تم إنشاء حساب المدير (${inst.email})`);
-      }catch(err){
-        if(err.code==="auth/email-already-in-use"){
-          log(`⚠️ البريد ${inst.email} موجود مسبقاً، سيتم استخدام الحساب الموجود`);
-          adminId = "EXISTING_UID"; // لا يمكن الحصول على UID مباشرة هنا
-        }else throw err;
-      }
-
-      await addDoc(instCol,{
-        name: inst.name,
-        adminEmail: inst.email,
-        adminId: adminId,
-        colors: inst.colors,
-        subscriptionType: inst.plan,
-        trialDays: inst.trialDays || null,
-        createdAt: serverTimestamp()
-      });
-      log(`✅ تم إنشاء المعهد: ${inst.name}`);
+    // 1️⃣ إنشاء حساب superAdmin
+    const superAdmin = { email:"Salahalkaleefa@gmail.com", password:"123456salah", type:"superAdmin" };
+    try{
+      const cred = await createUserWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
+      await ensureUserInFirestore(superAdmin.email, cred.user.uid, superAdmin.type);
+      log("✅ تم إنشاء حساب SuperAdmin");
+    }catch(err){
+      if(err.code === "auth/email-already-in-use"){
+        log("⚠️ حساب SuperAdmin موجود مسبقًا، سيتم إنشاء مستند Firestore إذا لم يكن موجودًا");
+        // تسجيل الدخول للحصول على UID
+        const cred = await signInWithEmailAndPassword(auth, superAdmin.email, superAdmin.password);
+        await ensureUserInFirestore(superAdmin.email, cred.user.uid, superAdmin.type);
+      } else throw err;
     }
 
-    log("🎉 تم التهيئة بنجاح! يمكنك الآن تسجيل الدخول بـ superAdmin أو حساب أي معهد.");
+    // 2️⃣ إنشاء معهدين تجريبيين
+    const institutes = [
+      { name:"معهد بغداد", email:"admin1@mail.com", password:"Admin1234" },
+      { name:"معهد البصرة", email:"admin2@mail.com", password:"Admin1234" }
+    ];
+
+    for(const inst of institutes){
+      try{
+        const cred = await createUserWithEmailAndPassword(auth, inst.email, inst.password);
+        const adminId = cred.user.uid;
+        // إضافة المستند في users
+        await ensureUserInFirestore(inst.email, adminId, "instituteAdmin");
+        // إضافة المعهد
+        const docRef = doc(collection(db,"institutes"));
+        await setDoc(docRef, {
+          name: inst.name,
+          adminId,
+          adminEmail: inst.email,
+          colors:{ primary:"#004aad", bg:"#f5f9ff", card:"#fff", accent:"#ffcc33" },
+          subscriptionType:"trial",
+          createdAt: serverTimestamp()
+        });
+        log(`✅ تم إنشاء المعهد: ${inst.name} (${inst.email})`);
+      }catch(err){
+        if(err.code==="auth/email-already-in-use"){
+          log(`⚠️ المستخدم ${inst.email} موجود مسبقًا، سيتم التأكد من مستند Firestore`);
+          // تسجيل الدخول للحصول على UID
+          const cred = await signInWithEmailAndPassword(auth, inst.email, inst.password);
+          await ensureUserInFirestore(inst.email, cred.user.uid, "instituteAdmin");
+        } else throw err;
+      }
+    }
+
+    log("🎉 تم الانتهاء من التهيئة بنجاح!");
   }catch(err){
-    console.error(err);
-    log("❌ حدث خطأ أثناء التهيئة: "+err.message);
+    log("❌ حدث خطأ أثناء التهيئة: " + err.message);
   }
 }
 
-document.getElementById('startBtn').addEventListener('click', initSystem);
+startBtn.addEventListener("click", startSetup);
 </script>
 </body>
 </html>
