--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
 body { font-family: 'Cairo', sans-serif; background: #f5f9ff; color: #102027; padding: 20px; direction: rtl; }
 .card { background: #fff; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.08); }
 input, select, button { padding: 10px; margin-bottom: 10px; border-radius: 8px; font-size: 15px; width: 100%; }
+input[readonly]{ background:#e6e6e6; cursor: not-allowed; }
 button { background: var(--primary); color: #fff; border: none; font-weight: bold; cursor: pointer; }
 button:hover { background: #003a8c; }
 label { font-size: 14px; display:block; margin-bottom:5px; }
@@ -30,12 +31,12 @@ th{background:var(--primary);color:#fff;}
 <h2>🔧 إعدادات المعهد</h2>
 
 <div class="card">
-  <strong>معلومات المعهد</strong>
-  <label>اسم المعهد</label><input type="text" id="instituteName">
-  <label>الشعار (رابط الصورة)</label><input type="text" id="instituteLogo">
+  <strong>معلومات المعهد (غير قابلة للتعديل)</strong>
+  <label>اسم المعهد</label><input type="text" id="instituteName" readonly>
+  <label>البريد الإلكتروني للمعهد</label><input type="email" id="instituteEmail" readonly>
   <label>العنوان</label><input type="text" id="instituteAddress">
   <label>رقم الهاتف</label><input type="text" id="institutePhone">
-  <label>البريد الإلكتروني</label><input type="email" id="instituteEmail">
+  <label>الشعار (رابط الصورة)</label><input type="text" id="instituteLogo">
   <button id="saveInstituteBtn">💾 حفظ معلومات المعهد</button>
 </div>
 
@@ -81,8 +82,6 @@ th{background:var(--primary);color:#fff;}
     <select id="userName"><option value="">اختر الاسم</option></select>
     <label>البريد الإلكتروني</label>
     <input type="email" id="userEmail" required>
-    <label>كلمة المرور</label>
-    <input type="password" id="userPassword" required>
     <button type="submit">✅ إنشاء المستخدم</button>
   </form>
 </div>
@@ -104,7 +103,7 @@ th{background:var(--primary);color:#fff;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getFirestore, doc, setDoc, getDoc, updateDoc, arrayUnion, arrayRemove, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword, updateEmail, updatePassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-analytics.js";
 
 // Firebase Config
@@ -129,10 +128,10 @@ onAuthStateChanged(auth,user=>{
 
 // --- عناصر الصفحة ---
 const instituteName = document.getElementById("instituteName");
-const instituteLogo = document.getElementById("instituteLogo");
+const instituteEmail = document.getElementById("instituteEmail");
 const instituteAddress = document.getElementById("instituteAddress");
 const institutePhone = document.getElementById("institutePhone");
-const instituteEmail = document.getElementById("instituteEmail");
+const instituteLogo = document.getElementById("instituteLogo");
 
 const facebookLink = document.getElementById("facebookLink");
 const instagramLink = document.getElementById("instagramLink");
@@ -162,12 +161,10 @@ let allNames = {students:[], teachers:[]};
 // --- دوال الحفظ ---
 document.getElementById("saveInstituteBtn").addEventListener("click", async()=>{
   await setDoc(doc(db,"settings","institute"),{
-    name: instituteName.value,
-    logo: instituteLogo.value,
     address: instituteAddress.value,
     phone: institutePhone.value,
-    email: instituteEmail.value
-  });
+    logo: instituteLogo.value
+  }, { merge:true });
   alert("✅ تم حفظ معلومات المعهد");
 });
 
@@ -185,7 +182,7 @@ document.getElementById("saveColorsBtn").addEventListener("click", async()=>{
   await setDoc(doc(db,"settings","colors"),{
     primary: primaryColor.value,
     accent: accentColor.value
-  });
+  }, { merge:true });
   document.documentElement.style.setProperty("--primary",primaryColor.value);
   document.documentElement.style.setProperty("--accent",accentColor.value);
   alert("✅ تم حفظ الألوان");
@@ -249,10 +246,9 @@ userForm.addEventListener("submit", async e=>{
   const type = userTypeSelect.value;
   const name = userNameSelect.value;
   const email = document.getElementById("userEmail").value.trim();
-  const password = document.getElementById("userPassword").value.trim();
-  if(!type || !name || !email || !password){alert("اكمل جميع الحقول"); return;}
+  if(!type || !name || !email){alert("اكمل جميع الحقول"); return;}
   try{
-    const userCred = await createUserWithEmailAndPassword(auth,email,password);
+    const userCred = await createUserWithEmailAndPassword(auth,email,"temporary123"); // كلمة مرور مؤقتة
     const uid = userCred.user.uid;
     await setDoc(doc(db,"users",uid), {name,type,email,createdAt:new Date().toISOString()});
     usersData.push({id:uid,type,name,email});
@@ -287,21 +283,6 @@ window.editUser = function(id){
   updateNames();
   userNameSelect.value = user.name;
   document.getElementById("userEmail").value = user.email;
-  userForm.onsubmit = async function(e){
-    e.preventDefault();
-    const newEmail = document.getElementById("userEmail").value.trim();
-    const newPassword = document.getElementById("userPassword").value.trim();
-    const userRef = doc(db,"users",id);
-    await updateDoc(userRef,{email:newEmail});
-    // تحديث كلمة المرور
-    try{ await auth.currentUser.updatePassword(newPassword); }catch(err){console.warn("لا يمكن تحديث كلمة المرور حالياً"); }
-    usersData = usersData.filter(u=>u.id!==id);
-    usersData.push({id:id,type:user.type,name:user.name,email:newEmail});
-    renderUsers();
-    userForm.reset();
-    alert("✅ تم تحديث المستخدم");
-    userForm.onsubmit = defaultUserFormSubmit;
-  };
 };
 
 window.deleteUser = async function(id){
@@ -316,17 +297,38 @@ const defaultUserFormSubmit = userForm.onsubmit;
 
 // --- تحميل البيانات عند البداية ---
 async function loadSettings(){
+  // جلب بيانات المعهد من صفحة مدير الموقع
+  const instDoc = await getDoc(doc(db,"institutes","INSTITUTE_ID")); // ضع هنا معرف المعهد أو اجلبه ديناميكي
+  if(instDoc.exists()){
+    instituteName.value = instDoc.data().name;
+    instituteEmail.value = instDoc.data().adminEmail;
+    primaryColor.value = (instDoc.data().colors && instDoc.data().colors.primary) || "#004aad";
+    accentColor.value = (instDoc.data().colors && instDoc.data().colors.accent) || "#ffcc33";
+    document.documentElement.style.setProperty("--primary",primaryColor.value);
+    document.documentElement.style.setProperty("--accent",accentColor.value);
+  }
+
+  // جلب بقية الإعدادات من settings
   const inst = await getDoc(doc(db,"settings","institute"));
-  if(inst.exists()){ instituteName.value=inst.data().name; instituteLogo.value=inst.data().logo; instituteAddress.value=inst.data().address; institutePhone.value=inst.data().phone; instituteEmail.value=inst.data().email; }
+  if(inst.exists()){ 
+    instituteAddress.value=inst.data().address; 
+    institutePhone.value=inst.data().phone; 
+    instituteLogo.value=inst.data().logo;
+  }
   const social = await getDoc(doc(db,"settings","social"));
-  if(social.exists()){ facebookLink.value=social.data().facebook; instagramLink.value=social.data().instagram; tiktokLink.value=social.data().tiktok; telegramLink.value=social.data().telegram; }
-  const colors = await getDoc(doc(db,"settings","colors"));
-  if(colors.exists()){ primaryColor.value=colors.data().primary; accentColor.value=colors.data().accent; document.documentElement.style.setProperty("--primary",colors.data().primary); document.documentElement.style.setProperty("--accent",colors.data().accent);}
+  if(social.exists()){ 
+    facebookLink.value=social.data().facebook; 
+    instagramLink.value=social.data().instagram; 
+    tiktokLink.value=social.data().tiktok; 
+    telegramLink.value=social.data().telegram; 
+  }
   const perc = await getDoc(doc(db,"settings","percentages"));
-  if(perc.exists()){ teacherPercent.value=perc.data().teacher; institutePercent.value=perc.data().institute; }
+  if(perc.exists()){ 
+    teacherPercent.value=perc.data().teacher; 
+    institutePercent.value=perc.data().institute; 
+  }
   loadBranches();
   fetchNames();
-  // تحميل المستخدمين
   const usersSnap = await getDocs(collection(db,"users"));
   usersData = usersSnap.docs.map(d=>({id:d.id, ...d.data()}));
   renderUsers();
